<resources>
    <string name="app_name">ElectriCarApps</string>
    <string name="title">Eletric Car</string>
    <string name="car">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potencia</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="recarga">Recarga</string>
    <string name="calcular">CALCULAR</string>
    <string-array name="array_cidades">
        <item>Ferira</item>
        <item>Jacobina</item>
        <item>Salvador</item>
        <item>Irece</item>
    </string-array>
</resources>
